# meson-project-template

./: README.md  meson.build  meson_options.txt
docs/: meson.build
tests/bar/: meson.build
tests/foo/: meson.build
